--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -19,6 +19,11 @@
     box-shadow: 4px 4px 4px #231c4b
     ;
    }
+
+   td.dado {
+
+background-color: red;
+}
    
 </Style>
 <h1>Lista de Itens</h1>
@@ -29,7 +34,7 @@
     <td>51 Fralda M + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td> 2 Fralda RN + Body Manga Longa RN</td>
+    <td class="dado"> 2 Fralda RN + Body Manga Longa RN</td>
     <td>52 Fralda G +Lenço Umedecido</td>
    </tr>
    <tr>
