--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -31,7 +31,7 @@ background-color: red;
 <table>
    <tr>
     <td>1 Fralda RN + Body Manga Longa RN</td>
-    <td>51 Fralda M + Lenço Umedecido</td>
+    <td class="dado">51 Fralda M + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado"> 2 Fralda RN + Body Manga Longa RN</td>
