--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -66,7 +66,7 @@ background-color: red;
     <td>59 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>10 Fralda P + Macacão Curto G</td>
+    <td class="dado">10 Fralda P + Macacão Curto G</td>
     <td>60 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
