--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -31,7 +31,7 @@ background-color: red;
 <table>
    <tr>
     <td>1 Fralda RN + Body Manga Longa RN</td>
-    <td>51 Fralda M + Lenço Umedecido</td>
+    <td class="dado">51 Fralda M + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado"> 2 Fralda RN + Body Manga Longa RN</td>
@@ -142,7 +142,7 @@ background-color: red;
     <td>78 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>29 Fralda M + Macacão Curto M</td>
+    <td class="dado">29 Fralda M + Macacão Curto M</td>
     <td>79 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
@@ -187,7 +187,7 @@ background-color: red;
    </tr>
    <tr>
     <td>40 Fralda M +Body Manga Curta G</td>
-    <td>90 Fralga XG + Kit Cueiro</td>
+    <td class="dado">90 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
     <td>41 Fralda M + Macacão Curto G</td>
