--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -38,7 +38,7 @@ background-color: red;
     <td>52 Fralda G +Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>3 Fralda RN + Body Manga Longa RN</td>
+    <td class="dado">3 Fralda RN + Body Manga Longa RN</td>
     <td>53 Fralda G +Lenço Umedecido</td>
    </tr>
    <tr>
@@ -50,7 +50,7 @@ background-color: red;
     <td>55 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>6 Fralda P + Macacão Cumprido RN</td>
+    <td class="dado">6 Fralda P + Macacão Cumprido RN</td>
     <td>56 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -58,7 +58,7 @@ background-color: red;
     <td>57 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>8 Fralda P+ Macacão Curto G</td>
+    <td class="dado">8 Fralda P+ Macacão Curto G</td>
     <td>58 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -67,7 +67,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">10 Fralda P + Macacão Curto G</td>
-    <td>60 Fralda G + Lenço Umedecido</td>
+    <td class="dado">60 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>11 Fralda P + Macacão Cumprido P</td>
@@ -82,7 +82,7 @@ background-color: red;
     <td>63 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>14 Fralda P+ Macacão Cumprido M</td>
+    <td class="dado">14 Fralda P+ Macacão Cumprido M</td>
     <td>64 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -123,7 +123,7 @@ background-color: red;
    </tr>
    <tr>
     <td>24 Fralda M + Body Manga Curta M</td>
-    <td>74 Fralda G + Sab.Liquido dove baby</td>
+    <td class="dado">74 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
     <td>25 Fralda M + Body Manga Curta M</td>
@@ -131,7 +131,7 @@ background-color: red;
    </tr>
    <tr>
     <td>26 Fralda M + Macacão Cumprido M</td>
-    <td>76 Fralda G + Pomada Assadura</td>
+    <td class="dado">76 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
     <td>27 Fralda M + Macacão Cumprido M</td>
@@ -210,23 +210,23 @@ background-color: red;
     <td>95 Fralga XG + Kit Fralda de Boca</td>
    </tr>
    <tr>
-    <td>46 Fralda M + Lenço Umedecido</td>
+    <td class="dado">46 Fralda M + Lenço Umedecido</td>
     <td>96 Fralda XG + Papeiro e Colher de Silicone ou bambu</td>
    </tr>
    <tr>
-    <td>47 Fralda M + Lenço Umedecido</td>
+    <td class="dado">47 Fralda M + Lenço Umedecido</td>
     <td>97 Fralga XG + Lençol de berço c/elástico e fronha</td>
    </tr>
    <tr>
-    <td>48 Fralda M + Lenço Umedecido</td>
+    <td class="dado">48 Fralda M + Lenço Umedecido</td>
     <td>98 Fralga XG + Lençol de berço c/elástico e fronha</td>
    </tr>
    <tr>
-    <td>49 Fralda M +Lenço Umedecido</td>
+    <td class="dado">49 Fralda M +Lenço Umedecido</td>
     <td>99 Fralga XG + Lençol de berço kit c/3</td>
    </tr>
    <tr>
-    <td>50 Fralda M+ Lenço Umedecido</td>
+    <td class="dado">50 Fralda M+ Lenço Umedecido</td>
     <td>100 Fralga XG + Kit Peneira Chá</td>
    </tr>
    <tr>
