--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -47,11 +47,11 @@ background-color: red;
    </tr>
    <tr>
     <td>5 Fralda RN + Macacão Curto M</td>
-    <td>55 Fralda G + Lenço Umedecido</td>
+    <td class="dado">55 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">6 Fralda P + Macacão Cumprido RN</td>
-    <td>56 Fralda G + Lenço Umedecido</td>
+    <td class="dado">56 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>7 Fralda P+ Macacão Cumprido RN</td>
@@ -70,12 +70,12 @@ background-color: red;
     <td class="dado">60 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>11 Fralda P + Macacão Cumprido P</td>
-    <td>61 Fralda G + Lenço Umedecido</td>
+    <td class="dado">11 Fralda P + Macacão Cumprido P</td>
+    <td class="dado">61 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>12 Fralda P+ Macacão Cumprido P</td>
-    <td>62 Fralda G + Lenço Umedecido</td>
+    <td class="dado">62 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>13 Fralda P+ Macacão Cumprido P</td>
@@ -91,14 +91,14 @@ background-color: red;
    </tr>
    <tr>
     <td>16 Fralda P + Body Manga Longa P</td>
-    <td>66 Fralda G + Sab.Liquido dove baby</td>
+    <td class="dado">66 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
     <td>17 Fralda P+ Body Manga Longa P</td>
-    <td>67 Fralda G + Sab.Liquido dove baby</td>
+    <td class="dado">67 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>18 Fralda P+ Body Manga Longa M</td>
+    <td class="dado">18 Fralda P+ Body Manga Longa M</td>
     <td>68 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
@@ -110,7 +110,7 @@ background-color: red;
     <td>70 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>21 Fralda M + Body Manga Longa M</td>
+    <td class="dado">21 Fralda M + Body Manga Longa M</td>
     <td>71 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
@@ -118,7 +118,7 @@ background-color: red;
     <td>72 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>23 Fralda M + Body Manga Longa M</td>
+    <td class="dado">23 Fralda M + Body Manga Longa M</td>
     <td>73 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
