--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -30,7 +30,7 @@ background-color: red;
 <h3>Certifique-se de que o item que escolher, já não foi escolhido por outra pessoa.</h3>
 <table>
    <tr>
-    <td>1 Fralda RN + Body Manga Longa RN</td>
+    <td class="dado">1 Fralda RN + Body Manga Longa RN</td>
     <td class="dado">51 Fralda M + Lenço Umedecido</td>
    </tr>
    <tr>
