--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -102,7 +102,7 @@ background-color: red;
     <td>68 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>19 Fralda P+ Body Manga Curta M</td>
+    <td class="dado">19 Fralda P+ Body Manga Curta M</td>
     <td>69 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
