--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -35,11 +35,11 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado"> 2 Fralda RN + Body Manga Longa RN</td>
-    <td>52 Fralda G +Lenço Umedecido</td>
+    <td class="dado">52 Fralda G +Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">3 Fralda RN + Body Manga Longa RN</td>
-    <td>53 Fralda G +Lenço Umedecido</td>
+    <td class="dado">53 Fralda G +Lenço Umedecido</td>
    </tr>
    <tr>
     <td>4 Fralda RN + Macacão Curto M</td>
@@ -135,11 +135,11 @@ background-color: red;
    </tr>
    <tr>
     <td>27 Fralda M + Macacão Cumprido M</td>
-    <td>77 Fralda G + Pomada Assadura</td>
+    <td class="dado">77 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
     <td>28 Fralda M+ Macacão Curto M</td>
-    <td>78 Fralda G + Pomada Assadura</td>
+    <td class="dado">78 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
     <td class="dado">29 Fralda M + Macacão Curto M</td>
