--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -43,7 +43,7 @@ background-color: red;
    </tr>
    <tr>
     <td>4 Fralda RN + Macacão Curto M</td>
-    <td>54 Fralda G + Lenço Umedecido</td>
+    <td class="dado">54 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>5 Fralda RN + Macacão Curto M</td>
@@ -143,14 +143,14 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">29 Fralda M + Macacão Curto M</td>
-    <td>79 Fralda G + Pomada Assadura</td>
+    <td class="dado">79 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
     <td>30 Fralda M + Macacão Curto M</td>
     <td>80 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>31 Fralda M + Body Manga Longa M</td>
+    <td class="dado">31 Fralda M + Body Manga Longa M</td>
     <td>81 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
@@ -163,7 +163,7 @@ background-color: red;
    </tr>
    <tr>
     <td>34 Fralda M+ Body Manga Curta M</td>
-    <td>84 Fralga XG + Pomada Assadura</td>
+    <td class="dado">84 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
     <td>35 Fralda M+ Body Manga Curta M</td>
