--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -162,7 +162,7 @@ background-color: red;
     <td>83 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>34 Fralda M+ Body Manga Curta M</td>
+    <td class="dado">34 Fralda M+ Body Manga Curta M</td>
     <td class="dado">84 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
