--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -126,7 +126,7 @@ background-color: red;
     <td class="dado">74 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>25 Fralda M + Body Manga Curta M</td>
+    <td class="dado">25 Fralda M + Body Manga Curta M</td>
     <td>75 Fralda G + Sab.Liquido Granado Roxo</td>
    </tr>
    <tr>
@@ -138,7 +138,7 @@ background-color: red;
     <td class="dado">77 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>28 Fralda M+ Macacão Curto M</td>
+    <td class="dado">28 Fralda M+ Macacão Curto M</td>
     <td class="dado">78 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
