--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -46,7 +46,7 @@ background-color: red;
     <td class="dado">54 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>5 Fralda RN + Macacão Curto M</td>
+    <td class="dado">5 Fralda RN + Macacão Curto M</td>
     <td class="dado">55 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -54,7 +54,7 @@ background-color: red;
     <td class="dado">56 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>7 Fralda P+ Macacão Cumprido RN</td>
+    <td class="dado">7 Fralda P+ Macacão Cumprido RN</td>
     <td>57 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -103,7 +103,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">19 Fralda P+ Body Manga Curta M</td>
-    <td>69 Fralda G + Sab.Liquido dove baby</td>
+    <td class="dado">69 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
     <td>20 Fralda P+ Body Manga Curta M</td>
