--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -59,7 +59,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">8 Fralda P+ Macacão Curto G</td>
-    <td>58 Fralda G + Lenço Umedecido</td>
+    <td class="dado">58 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>9 Fralda P + Macacão Curto G</td>
@@ -106,7 +106,7 @@ background-color: red;
     <td class="dado">69 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>20 Fralda P+ Body Manga Curta M</td>
+    <td class="dado">20 Fralda P+ Body Manga Curta M</td>
     <td>70 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
@@ -166,7 +166,7 @@ background-color: red;
     <td class="dado">84 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>35 Fralda M+ Body Manga Curta M</td>
+    <td class="dado">35 Fralda M+ Body Manga Curta M</td>
     <td>85 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
