--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -127,7 +127,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">25 Fralda M + Body Manga Curta M</td>
-    <td>75 Fralda G + Sab.Liquido Granado Roxo</td>
+    <td class="dado">75 Fralda G + Sab.Liquido Granado Roxo</td>
    </tr>
    <tr>
     <td>26 Fralda M + Macacão Cumprido M</td>
@@ -170,64 +170,64 @@ background-color: red;
     <td>85 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>36 Fralda M + Body Manga Curta G</td>
-    <td>86 Fralga XG + kit de Mamadeira</td>
+    <td>36 Fralda M + Sapatinho</td>
+    <td>86 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>37 Fralda M + Body Manga Curta G</td>
+    <td>37 Fralda M + Sapatinho</td>
     <td>87 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
-    <td>38 Fralda M + Body Manga Curta G</td>
-    <td>88 Fralga XG + Kit Cueiro</td>
+    <td>38 Fralda M + Sapatinho</td>
+    <td>88 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>39 Fralda M +Body Manga Curta G</td>
-    <td>89 Fralga XG + Kit Cueiro</td>
+    <td>39 Fralda M + Sapatinho</td>
+    <td>89 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>40 Fralda M +Body Manga Curta G</td>
+    <td>40 Fralda M + Par de meias</td>
     <td class="dado">90 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
-    <td>41 Fralda M + Macacão Curto G</td>
-    <td>91 Fralga XG + Chuquinha e Mordedor</td>
+    <td>41 Fralda M + Par de meias</td>
+    <td>91 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>42 Fralda M+ Macacão Curto G</td>
-    <td>92 Fralga XG + Escova de Lavar Mamadeira</td>
+    <td>42 Fralda M + Par de meias</td>
+    <td>92 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>43 Fralda M+ Macacão Curto G</td>
-    <td>93 Fralga XG + Kit Fralda de Boca</td>
+    <td>43 Fralda M + Par de meias</td>
+    <td>93 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>44 Fralda M+ Macacão Curto G</td>
-    <td>94 Fralga XG ++ Kit Fralda de Boca</td>
+    <td>44 Fralda M + Par de meias</td>
+    <td>94 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>45 Fralda M+ Macacão Curto G</td>
-    <td>95 Fralga XG + Kit Fralda de Boca</td>
+    <td>45 Fralda M + Par de meias</td>
+    <td>95 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td class="dado">46 Fralda M + Lenço Umedecido</td>
-    <td>96 Fralda XG + Papeiro e Colher de Silicone ou bambu</td>
+    <td>96 Fralda XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td class="dado">47 Fralda M + Lenço Umedecido</td>
-    <td>97 Fralga XG + Lençol de berço c/elástico e fronha</td>
+    <td>97 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td class="dado">48 Fralda M + Lenço Umedecido</td>
-    <td>98 Fralga XG + Lençol de berço c/elástico e fronha</td>
+    <td>98 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td class="dado">49 Fralda M +Lenço Umedecido</td>
-    <td>99 Fralga XG + Lençol de berço kit c/3</td>
+    <td>99 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td class="dado">50 Fralda M+ Lenço Umedecido</td>
-    <td>100 Fralga XG + Kit Peneira Chá</td>
+    <td>100 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
     <td></td>
