--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -63,7 +63,7 @@ background-color: red;
    </tr>
    <tr>
     <td>9 Fralda P + Macacão Curto G</td>
-    <td>59 Fralda G + Lenço Umedecido</td>
+    <td class="dado">59 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">10 Fralda P + Macacão Curto G</td>
