--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -55,14 +55,14 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">7 Fralda P+ Macacão Cumprido RN</td>
-    <td>57 Fralda G + Lenço Umedecido</td>
+    <td class="dado">57 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">8 Fralda P+ Macacão Curto G</td>
     <td class="dado">58 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>9 Fralda P + Macacão Curto G</td>
+    <td class="dado">9 Fralda P + Macacão Curto G</td>
     <td class="dado">59 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -147,7 +147,7 @@ background-color: red;
    </tr>
    <tr>
     <td>30 Fralda M + Macacão Curto M</td>
-    <td>80 Fralda G + Pomada Assadura</td>
+    <td class="dado">80 Fralda G + Pomada Assadura</td>
    </tr>
    <tr>
     <td class="dado">31 Fralda M + Body Manga Longa M</td>
