--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -74,7 +74,7 @@ background-color: red;
     <td class="dado">61 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>12 Fralda P+ Macacão Cumprido P</td>
+    <td class="dado">12 Fralda P+ Macacão Cumprido P</td>
     <td class="dado">62 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
