--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -170,7 +170,7 @@ background-color: red;
     <td>85 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
-    <td>36 Fralda M + Sapatinho</td>
+    <td class="dado">36 Fralda M + Sapatinho</td>
     <td>86 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
