--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -79,18 +79,18 @@ background-color: red;
    </tr>
    <tr>
     <td>13 Fralda P+ Macacão Cumprido P</td>
-    <td>63 Fralda G + Lenço Umedecido</td>
+    <td class="dado">63 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">14 Fralda P+ Macacão Cumprido M</td>
-    <td>64 Fralda G + Lenço Umedecido</td>
+    <td class="dado">64 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td>15 Fralda P+ Macacão Curto G</td>
     <td>65 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>16 Fralda P + Body Manga Longa P</td>
+    <td class="dado">16 Fralda P + Body Manga Longa P</td>
     <td class="dado">66 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
@@ -206,7 +206,7 @@ background-color: red;
     <td>94 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>45 Fralda M + Par de meias</td>
+    <td class="dado">45 Fralda M + Par de meias</td>
     <td>95 Fralga XG + Conjunto de pagão</td>
    </tr>
    <tr>
