--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -122,7 +122,7 @@ background-color: red;
     <td>73 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
-    <td>24 Fralda M + Body Manga Curta M</td>
+    <td class="dado">24 Fralda M + Body Manga Curta M</td>
     <td class="dado">74 Fralda G + Sab.Liquido dove baby</td>
    </tr>
    <tr>
@@ -167,7 +167,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">35 Fralda M+ Body Manga Curta M</td>
-    <td>85 Fralga XG + Pomada Assadura</td>
+    <td class="dado">85 Fralga XG + Pomada Assadura</td>
    </tr>
    <tr>
     <td class="dado">36 Fralda M + Sapatinho</td>
@@ -191,14 +191,14 @@ background-color: red;
    </tr>
    <tr>
     <td>41 Fralda M + Par de meias</td>
-    <td>91 Fralga XG + Pacot. algodão bola</td>
+    <td class="dado">91 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
     <td>42 Fralda M + Par de meias</td>
     <td>92 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>43 Fralda M + Par de meias</td>
+    <td class="dado">43 Fralda M + Par de meias</td>
     <td>93 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
