--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -78,7 +78,7 @@ background-color: red;
     <td class="dado">62 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>13 Fralda P+ Macacão Cumprido P</td>
+    <td class="dado">13 Fralda P+ Macacão Cumprido P</td>
     <td class="dado">63 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -86,7 +86,7 @@ background-color: red;
     <td class="dado">64 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
-    <td>15 Fralda P+ Macacão Curto G</td>
+    <td class="dado">15 Fralda P+ Macacão Curto G</td>
     <td>65 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
@@ -186,7 +186,7 @@ background-color: red;
     <td>89 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>40 Fralda M + Par de meias</td>
+    <td class="dado">40 Fralda M + Par de meias</td>
     <td class="dado">90 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
