--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -194,7 +194,7 @@ background-color: red;
     <td class="dado">91 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>42 Fralda M + Par de meias</td>
+    <td class="dado">42 Fralda M + Par de meias</td>
     <td>92 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
