--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -87,7 +87,7 @@ background-color: red;
    </tr>
    <tr>
     <td class="dado">15 Fralda P+ Macacão Curto G</td>
-    <td>65 Fralda G + Lenço Umedecido</td>
+    <td class="dado">65 Fralda G + Lenço Umedecido</td>
    </tr>
    <tr>
     <td class="dado">16 Fralda P + Body Manga Longa P</td>
