--- a/ListadeItens.html
+++ b/ListadeItens.html
@@ -174,7 +174,7 @@ background-color: red;
     <td>86 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
-    <td>37 Fralda M + Sapatinho</td>
+    <td class="dado">37 Fralda M + Sapatinho</td>
     <td>87 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
@@ -190,7 +190,7 @@ background-color: red;
     <td class="dado">90 Fralga XG + Kit Cueiro</td>
    </tr>
    <tr>
-    <td>41 Fralda M + Par de meias</td>
+    <td class="dado">41 Fralda M + Par de meias</td>
     <td class="dado">91 Fralga XG + Pacot. algodão bola</td>
    </tr>
    <tr>
